# ktutorial

./: CMakeLists.txt
ktutorial-editor/doc/: CMakeLists.txt  Messages.sh  commands.docbook  header.pot  index.docbook  installation.docbook  ktutorial-editor-handbook.pot  using.docbook
ktutorial-editor/doc/en/: CMakeLists.txt  index.docbook  using.docbook
ktutorial-editor/doc/es/: CMakeLists.txt  ktutorial-editor-handbook.po
ktutorial-editor/src/: CMakeLists.txt  EditActions.cpp  EditActions.h  FileActions.cpp  FileActions.h  KTutorialEditor.cpp  KTutorialEditor.h  TestTutorialActions.cpp  TestTutorialActions.h  TutorialTester.cpp  TutorialTester.h  ktutorial-editor.desktop  ktutorial-editorui.rc  main.cpp
ktutorial-editor/src/commands/: CMakeLists.txt  ReactionCommands.cpp  ReactionCommands.h  StepCommands.cpp  StepCommands.h  TutorialCommands.cpp  TutorialCommands.h
ktutorial-editor/src/data/: CMakeLists.txt  Reaction.cpp  Reaction.h  Step.cpp  Step.h  Tutorial.cpp  Tutorial.h  WaitFor.cpp  WaitFor.h  WaitForComposed.cpp  WaitForComposed.h  WaitForEvent.cpp  WaitForEvent.h  WaitForNot.cpp  WaitForNot.h  WaitForProperty.cpp  WaitForProperty.h  WaitForSignal.cpp  WaitForSignal.h  WaitForStepActivation.cpp  WaitForStepActivation.h  WaitForWindow.cpp  WaitForWindow.h
ktutorial-editor/src/serialization/: CMakeLists.txt  DeserializationException.cpp  DeserializationException.h  IOException.cpp  IOException.h  JavaScriptExporter.cpp  JavaScriptExporter.h  JavascriptExporter.cpp  JavascriptExporter.h  Serialization.cpp  Serialization.h  Tutorial.xsd  TutorialReader.cpp  TutorialReader.h  TutorialWriter.cpp  TutorialWriter.h
ktutorial-editor/src/targetapplication/: CMakeLists.txt  DBusException.cpp  DBusException.h  RemoteClass.cpp  RemoteClass.h  RemoteEditorSupport.cpp  RemoteEditorSupport.h  RemoteEventSpy.cpp  RemoteEventSpy.h  RemoteObject.cpp  RemoteObject.h  RemoteObjectMapper.cpp  RemoteObjectMapper.h  TargetApplication.cpp  TargetApplication.h
ktutorial-editor/src/tutorials/: BasicConcepts.js  BasicConcepts.xml  CMakeLists.txt  InteractingWithTheTargetApplication.js  InteractingWithTheTargetApplication.xml
ktutorial-editor/src/util/: CMakeLists.txt  Exception.cpp  Exception.h
ktutorial-editor/src/view/: ActionListWidget.cpp  ActionListWidget.h  AutoExpandableTreeView.cpp  AutoExpandableTreeView.h  CMakeLists.txt  CommandWidget.cpp  CommandWidget.h  CustomCodeWidget.ui  DialogRunner.cpp  DialogRunner.h  EditionDialog.cpp  EditionDialog.h  EditionWidget.cpp  EditionWidget.h  LicenseWidget.cpp  LicenseWidget.h  LicenseWidget.ui  NewWaitForWidget.cpp  NewWaitForWidget.h  NewWaitForWidget.ui  ReactionTreeItem.cpp  ReactionTreeItem.h  ReactionWidget.cpp  ReactionWidget.h  ReactionWidget.ui  RemoteObjectChooser.cpp  RemoteObjectChooser.h  RemoteObjectChooser.ui  RemoteObjectChooserFilterModel.cpp  RemoteObjectChooserFilterModel.h  RemoteObjectNameRegister.cpp  RemoteObjectNameRegister.h  RemoteObjectNameWidget.cpp  RemoteObjectNameWidget.h  RemoteObjectNameWidget.ui  RemoteObjectTreeItem.cpp  RemoteObjectTreeItem.h  RemoteObjectTreeItemUpdater.cpp  RemoteObjectTreeItemUpdater.h  RemoteObjectTreeSelectionManager.cpp  (+65 more)
ktutorial-library/: CMakeLists.txt  Messages.sh
ktutorial-library/cmake/modules/: CMakeLists.txt  FindKTutorial.cmake
ktutorial-library/po/: CMakeLists.txt  Messages.sh  es.po  ktutorial.pot
ktutorial-library/src/: CMakeLists.txt  KTutorial.cpp  KTutorial.h  KTutorialCustomization.cpp  KTutorialCustomization.h  KTutorial_p.h  ObjectFinder.cpp  ObjectFinder.h  ObjectFinder_p.h  Option.cpp  Option.h  Option_p.h  Step.cpp  Step.h  Step_p.h  Tutorial.cpp  Tutorial.h  TutorialInformation.cpp  TutorialInformation.h  TutorialInformation_p.h  TutorialManager.cpp  TutorialManager.h  TutorialManager_p.h  Tutorial_p.h  WaitFor.cpp  WaitFor.h  WaitForAnd.cpp  WaitForAnd.h  WaitForAnd_p.h  WaitForComposed.cpp  WaitForComposed.h  WaitForComposed_p.h  WaitForEvent.cpp  WaitForEvent.h  WaitForEvent_p.h  WaitForNot.cpp  WaitForNot.h  WaitForNot_p.h  WaitForOr.cpp  WaitForOr.h  (+17 more)
ktutorial-library/src/common/: CMakeLists.txt  WindowVisibilitySpy.cpp  WindowVisibilitySpy.h
ktutorial-library/src/customization/: CMakeLists.txt  DefaultKdeCustomization.cpp  DefaultKdeCustomization.h
ktutorial-library/src/editorsupport/: CMakeLists.txt  ClassRegisterAdaptor.cpp  ClassRegisterAdaptor.h  EditorSupport.cpp  EditorSupport.h  EditorSupportAdaptor.cpp  EditorSupportAdaptor.h  EventSpy.cpp  EventSpy.h  EventSpyAdaptor.cpp  EventSpyAdaptor.h  ObjectRegister.cpp  ObjectRegister.h  ObjectRegisterAdaptor.cpp  ObjectRegisterAdaptor.h
ktutorial-library/src/extendedinformation/: CMakeLists.txt  WidgetHighlighter.cpp  WidgetHighlighter.h  WidgetHighlighterManager.cpp  WidgetHighlighterManager.h
ktutorial-library/src/scripting/: CMakeLists.txt  ScriptManager.cpp  ScriptManager.h  ScriptedStep.cpp  ScriptedStep.h  ScriptedTutorial.cpp  ScriptedTutorial.h  ScriptingModule.cpp  ScriptingModule.h
ktutorial-library/src/tutorials/: CMakeLists.txt  UsingKTutorial.cpp  UsingKTutorial.h
ktutorial-library/src/view/: CMakeLists.txt  StepTextWidget.cpp  StepTextWidget.h  StepWidget.cpp  StepWidget.h  StepWidget.ui  TutorialListModel.cpp  TutorialListModel.h  TutorialManagerDialog.cpp  TutorialManagerDialog.h  TutorialManagerDialog.ui  (+2 more)
ktutorial-library/tests/: CMakeLists.txt  ObjectFinderTest.cpp  OptionTest.cpp  StepTest.cpp  TutorialInformationTest.cpp  TutorialManagerTest.cpp  TutorialTest.cpp  WaitForAndTest.cpp  WaitForComposedTest.cpp  WaitForEventTest.cpp  WaitForNotTest.cpp  WaitForOrTest.cpp  WaitForPropertyTest.cpp  WaitForSignalTest.cpp  WaitForStepActivationTest.cpp  WaitForTest.cpp  WaitForWindowTest.cpp  runMemcheck.py
ktutorial-test-app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Messages.sh  TestApp.cpp  TutorialClearText.cpp  TutorialClearText.h  TutorialClearText.js  TutorialClearText.py  TutorialMoveText.cpp  TutorialMoveText.h  TutorialMoveText.py  ktutorial-test-appui.rc  main.cpp
ktutorial-test-app/po/: CMakeLists.txt  Messages.sh  es.po  ktutorial-test-app.pot
(+118 files in other folders)
